--- a/src/app/components/presence/presence.component.html
+++ b/src/app/components/presence/presence.component.html
@@ -1,1 +1,6 @@
-<p>presence works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>{{user.displayName}}</mat-card-title>
+  </mat-card-header>
+</mat-card>
+
