--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,1 +1,36 @@
-<p>user-list works!</p>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <button mat-icon-button routerLink="/">
+      <mat-icon>navigate_before</mat-icon>
+    </button>
+    <span>&nbsp;&nbsp;</span>
+    <span>フォローするユーザを追加</span>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+<!-- <mat-form-field>
+  <mat-label>絞り込む</mat-label>
+  <input matInput name="needle">
+  <mat-icon matPrefix>search</mat-icon>
+  <button mat-icon-button matSuffix><mat-icon>clear</mat-icon></button>
+</mat-form-field> -->
+<table mat-table [dataSource]="dataSource" matSort>
+  <ng-container matColumnDef="_dummy">
+    <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
+    <td mat-cell *matCellDef="let row">
+      <mat-icon color="primary" class="add-button">add_circle</mat-icon>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="displayName">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>名前</th>
+    <td mat-cell *matCellDef="let element">{{element.displayName}}</td>
+  </ng-container>
+  <ng-container matColumnDef="department">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>部署</th>
+    <td mat-cell *matCellDef="let element">{{element.department}}</td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayColumns; sticky:true"></tr>
+  <tr mat-row *matRowDef="let row; columns:displayColumns" (click)="onRowClick(row)" matRipple></tr>
+</table>
