Implement profile photo

--- a/src/app/components/presence/presence.component.html
+++ b/src/app/components/presence/presence.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-header>
+    <app-avatar [user]="user" mat-card-avatar></app-avatar>
     <mat-card-title>{{user.displayName}}</mat-card-title>
   </mat-card-header>
 </mat-card>
-
