--- a/src/app/components/presence/presence.component.html
+++ b/src/app/components/presence/presence.component.html
@@ -1,6 +1,18 @@
-<mat-card>
+<mat-card class="user-card">
   <mat-card-header>
     <app-avatar [user]="user" mat-card-avatar></app-avatar>
     <mat-card-title>{{user.displayName}}</mat-card-title>
+    <mat-card-subtitle>
+      <ng-container *ngIf="availability$ | async as availability">
+        {{availability}}
+      </ng-container>
+    </mat-card-subtitle>
   </mat-card-header>
+  <mat-card-content>
+    hoge hoge hoge<br>
+  </mat-card-content>
 </mat-card>
+
+<ng-template #loading>
+  <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+</ng-template>
