--- a/src/app/components/avatar/avatar.component.scss
+++ b/src/app/components/avatar/avatar.component.scss
@@ -1,6 +1,7 @@
 .avatar {
-  width: 40px;
-  height: 40px;
+  box-sizing: border-box;
+  width: 48px;
+  height: 48px;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -8,4 +9,6 @@
 .text-face {
   overflow: hidden;
   text-align: center;
+  font-size: 14px;
+  padding: 4px;
 }
