--- a/src/app/components/presence/presence.component.scss
+++ b/src/app/components/presence/presence.component.scss
@@ -1,15 +1,26 @@
-.user-card {
+mat-card {
   margin: 16px;
-  padding: 8px;
+}
+
+.card-content {
   display: flex;
+  flex-wrap: wrap;
 
   .avatar {
     margin: 0 8px;
-    flex-grow: 0;
-    flex-shrink: 0;
+    flex: 0 0 48px;
   }
 
   .name {
     flex: 0 0 200px;
+  }
+
+  .status-message {
+    min-width: 160px;
+    flex: 1 0 160px;
+  }
+
+  .schedule {
+    flex: 2 0 360px;
   }
 }
