--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -1,19 +1,53 @@
 <ng-container *ngIf="scheduleItems$|async as scheduleItems">
-  <svg [attr.viewBox]="calcViewBox(scheduleItems.length)">
+  <svg xmlns="http://www.w3.org/2000/svg" class="svg" [attr.viewBox]="calcViewBox(scheduleItems.length)">
+    <defs>
+      <pattern id="workingElsewhere" width="6" height="6" viewBox="0 0 40 40" patternUnits="userSpaceOnUse"
+        patternTransform="">
+        <rect width="100%" height="100%" fill="white" />
+        <path
+          d="M-20 40l20-20l20 20l20-20l20 20l20-20l20 20v-20l-20-20l-20 20l-20-20l-20 20l-20-20l-20 20zM-20 0l20-20l20 20l20-20l20 20l20-20l20 20v-20l-20-20l-20 20l-20-20l-20 20l-20-20l-20 20zM-20 80l20-20l20 20l20-20l20 20l20-20l20 20v-20l-20-20l-20 20l-20-20l-20 20l-20-20l-20 20z "
+          fill="#0078b4" />
+      </pattern>
+      <pattern id="tentative" width="6" height="6" viewBox="0 0 40 40" patternUnits="userSpaceOnUse"
+        patternTransform="rotate(45)">
+        <path d="M-10 10h 60v20h-60zM-10-30h60v20h-60" fill="#0078b4" />
+      </pattern>
+      <pattern id="oof" width="6" height="6" viewBox="0 0 40 40" patternUnits="userSpaceOnUse"
+        patternTransform="rotate(90)">
+        <rect width="100%" height="100%" fill="#c211c1" />
+        <path
+          d="M0 28a 8-8 0 0 0 8-8a 12-12 0 0 1 12-12a 12 12 0 0 1 12 12h-4a-8-8 0 0 0-8-8a-8 8 0 0 0-8 8a-12 12 0 0 1-12 12a-12-12 0 0 1-12-12h4a 8 8 0 0 0 8 8z"
+          fill="white" />
+        <path
+          d="M0 8a 12 12 0 0 1 12 12a 8 8 0 0 0 8 8a 8-8 0 0 0 8-8a 12-12 0 0 1 12-12a 12 12 0 0 1 12 12a 8 8 0 0 0 8 8v4a-12-12 0 0 1-12-12a-8-8 0 0 0-8-8a-8 8 0 0 0-8 8a-12 12 0 0 1-12 12a-12-12 0 0 1-12-12a-8-8 0 0 0-8-8a-8 8 0 0 0-8 8h-4a 12-12 0 0 1 12-12z"
+          fill="white" />
+        <path
+          d="M20 8a 12 12 0 0 1 12 12a 8 8 0 0 0 8 8v4a-12-12 0 0 1-12-12a-8-8 0 0 0-8-8zM-20 8a 12 12 0 0 1 12 12a 8 8 0 0 0 8 8v4a-12-12 0 0 1-12-12a-8-8 0 0 0-8-8z"
+          fill="white" />
+      </pattern>
+    </defs>
+
+    <!-- 背景 縦棒-->
     <g *ngFor="let hour of hours; let i=index" class="hour-bar">
       <rect [attr.x]="(32*i)+'px'" y="0" width="24px" height="100%" rx="12px" ry="12px" />
       <text [attr.x]="(32*i+12)+'px'" y="18px" text-anchor="middle" class="hour-text">{{hour}}</text>
     </g>
 
-    <ng-container *ngFor="let scheduleItem of scheduleItems; let i=index">
-      <g class="schedule-item" [attr.transform]="calcTransform(scheduleItem, i)">
-        <rect x="0" y="0" [attr.width]="calcWidth(scheduleItem)" height="20px" rx="4px" ry="4px"></rect>
-        <text x="4px" y="16px" class="schedule-subject">
-          {{scheduleItem.start?.dateTime|date:"H:mm":"+0900"}}
-          -
-          {{scheduleItem.end?.dateTime|date:"H:mm":"+0900"}}
-          {{scheduleItem.subject}}</text>
-      </g>
-    </ng-container>
+    <!-- 時間外マスク -->
+    <g class="oob-mask">
+      <rect x="0" y="0" width="288px" height="100%" fill="white" fill-opacity="65%" />
+      <rect x="576px" y="0" width="192px" height="100%" fill="white" fill-opacity="65%" />
+    </g>
+
+    <!-- スケジュール -->
+    <g class="schedule-item" *ngFor="let scheduleItem of scheduleItems; let i=index">
+      <rect x="0" y="0" [attr.width]="calcWidth(scheduleItem)" height="20px"
+        [attr.transform]="calcTransform(scheduleItem, i)" class="bar {{scheduleItem.status}}"></rect>
+      <text x="4px" [attr.y]="(i*28+48)+'px'" class="subject">
+        {{scheduleItem.start?.dateTime|date:"HH:mm":"+0900"}}
+        -
+        {{scheduleItem.end?.dateTime|date:"HH:mm":"+0900"}}
+        {{scheduleItem.subject}}</text>
+    </g>
   </svg>
 </ng-container>
