--- a/src/app/components/presence/presence.component.html
+++ b/src/app/components/presence/presence.component.html
@@ -1,5 +1,7 @@
 <mat-card *ngIf="presence$ | async as presence; else loading">
   <mat-card-content class="card-content">
+    <button *ngIf="editMode" (click)="remove()" mat-icon-button color="warn"
+      class="clear-button"><mat-icon>clear</mat-icon></button>
     <app-avatar [user]="user" class="avatar"></app-avatar>
     <div class="name">
       <div>{{user.displayName}}</div>
