フィルタ実装しました。スティッキー見出し表示の調整

--- a/src/app/components/user-list/user-list.component.scss
+++ b/src/app/components/user-list/user-list.component.scss
@@ -1,3 +1,24 @@
+:host {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.toolbar {
+  flex: 0 0 auto;
+}
+
+.form-container {
+  mat-form-field {
+    width: 100%;
+  }
+}
+
+.table-container {
+  flex: 1 1 auto;
+  overflow: scroll;
+}
+
 .add-button {
   visibility: hidden;
 }
