Implement read/write statsu message.

--- a/src/app/components/following-list/following-list.component.html
+++ b/src/app/components/following-list/following-list.component.html
@@ -1,13 +1,13 @@
 <ng-container *ngIf="followings$ | async as followings">
-  <div *ngIf="followings.length === 0" class="center">
-    <p>フォロー中のユーザはありません。</p>
-    <button mat-raised-button color="primary" routerLink="/user-list">フォローするユーザを追加する</button>
+  <div *ngIf="followings.length === 0" class="centering">
+    <p>フォロー中のメンバーはありません。</p>
+    <button mat-raised-button color="primary" routerLink="/user-list">フォローするメンバーを追加する</button>
   </div>
 
   <app-presence *ngFor="let following of followings" [user]="following" [targetDate]="targetDate"
     [editMode]="editMode"></app-presence>
 
-  <div *ngIf="followings.length !== 0 && editMode" class="center">
-    <button mat-raised-button color="primary" routerLink="/user-list">フォローするユーザを追加する。</button>
+  <div *ngIf="followings.length !== 0 && editMode" class="centering">
+    <button mat-raised-button color="primary" routerLink="/user-list">フォローするメンバーを追加する</button>
   </div>
 </ng-container>
