--- a/src/app/components/status-message-form/status-message-form.component.html
+++ b/src/app/components/status-message-form/status-message-form.component.html
@@ -14,5 +14,5 @@
     </mat-select>
   </mat-form-field>
 
-  <button type="submit" mat-flat-button color="primary" [disabled]="form.invalid">保存</button>
+  <button type="submit" mat-flat-button color="primary" [disabled]="form.invalid" [disabled]="saving">保存</button>
 </form>
