change icon of menu

--- a/src/app/components/settings-button/settings-button.component.html
+++ b/src/app/components/settings-button/settings-button.component.html
@@ -1,5 +1,5 @@
 <button mat-icon-button [matMenuTriggerFor]="menu">
-  <mat-icon>settings</mat-icon>
+  <mat-icon>menu</mat-icon>
 </button>
 
 <mat-menu #menu="matMenu">
