--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -8,39 +8,47 @@
   </mat-toolbar-row>
 </mat-toolbar>
 
-<div class="form-container">
-  <mat-form-field>
-    <mat-label>絞り込む</mat-label>
-    <input matInput name="needle" [formControl]="needle">
-    <mat-icon matPrefix>search</mat-icon>
-    <button mat-icon-button matSuffix (click)="needle.setValue('')"
-      [style.visibility]="(needle.value?.length ?? 0) > 0 ? 'visible' : 'hidden'"><mat-icon>clear</mat-icon></button>
-  </mat-form-field>
-</div>
+<ng-container *ngIf="dataSource;else loading">
+  <div class="form-container">
+    <mat-form-field>
+      <mat-label>絞り込む</mat-label>
+      <input matInput name="needle" [formControl]="needle">
+      <mat-icon matPrefix>search</mat-icon>
+      <button mat-icon-button matSuffix (click)="needle.setValue('')"
+        [style.visibility]="(needle.value?.length ?? 0) > 0 ? 'visible' : 'hidden'"><mat-icon>clear</mat-icon></button>
+    </mat-form-field>
+  </div>
 
-<div class="table-container">
-  <table mat-table [dataSource]="dataSource" matSort class="user-list-table">
-    <ng-container matColumnDef="_dummy">
-      <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
-      <td mat-cell *matCellDef="let row">
-        <mat-icon color="primary" class="add-button">add_circle</mat-icon>
-      </td>
-    </ng-container>
+  <div class="table-container">
+    <table mat-table [dataSource]="dataSource" matSort class="user-list-table">
+      <ng-container matColumnDef="_dummy">
+        <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
+        <td mat-cell *matCellDef="let row">
+          <mat-icon color="primary" class="add-button">add_circle</mat-icon>
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="displayName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>名前</th>
-      <td mat-cell *matCellDef="let element">{{element.displayName}}</td>
-    </ng-container>
-    <ng-container matColumnDef="department">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>部署</th>
-      <td mat-cell *matCellDef="let element">{{element.department}}</td>
-    </ng-container>
-    <ng-container matColumnDef="mail">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>メールアドレス</th>
-      <td mat-cell *matCellDef="let element">{{element.mail}}</td>
-    </ng-container>
+      <ng-container matColumnDef="displayName">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>名前</th>
+        <td mat-cell *matCellDef="let element">{{element.displayName}}</td>
+      </ng-container>
+      <ng-container matColumnDef="department">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>部署</th>
+        <td mat-cell *matCellDef="let element">{{element.department}}</td>
+      </ng-container>
+      <ng-container matColumnDef="mail">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>メールアドレス</th>
+        <td mat-cell *matCellDef="let element">{{element.mail}}</td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayColumns; sticky:true"></tr>
-    <tr mat-row *matRowDef="let row; columns:displayColumns" (click)="onRowClick(row)" matRipple></tr>
-  </table>
-</div>
+      <tr mat-header-row *matHeaderRowDef="displayColumns; sticky:true"></tr>
+      <tr mat-row *matRowDef="let row; columns:displayColumns" (click)="onRowClick(row)" matRipple></tr>
+    </table>
+  </div>
+</ng-container>
+
+<ng-template #loading>
+  <div class="spinner-container">
+    <mat-spinner></mat-spinner>
+  </div>
+</ng-template>
