--- a/src/app/components/user-list/user-list.component.scss
+++ b/src/app/components/user-list/user-list.component.scss
@@ -38,3 +38,11 @@
     border-color: currentColor;
   }
 }
+
+.spinner-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
