--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -20,5 +20,5 @@
 </div>
 
 <ng-template #inEditMode>
-  <button mat-button (click)="editMode=false">Done</button>
+  <button mat-button (click)="editMode=false"><mat-icon>done</mat-icon>Done</button>
 </ng-template>
