--- a/src/app/components/avatar/avatar.component.html
+++ b/src/app/components/avatar/avatar.component.html
@@ -1,6 +1,9 @@
-<ng-container *ngIf="imgSrc$ | async as imgSrc; else textFace">
-  <img [src]="imgSrc.safeUrl" (load)="revokeObjectURL(imgSrc.objectUrl)" class="avatar">
-</ng-container>
-<ng-template #textFace>
-  <div class="text-face avatar" [style]="textStyle" >{{displayName}}</div>
-</ng-template>
+@if (imgSrc$ | async; as imgSrc) {
+  <img
+    [src]="imgSrc.safeUrl"
+    (load)="revokeObjectURL(imgSrc.objectUrl)"
+    class="avatar"
+  />
+} @else {
+  <div class="text-face avatar" [style]="textStyle">{{ displayName }}</div>
+}
