--- a/src/app/components/settings-button/settings-button.component.html
+++ b/src/app/components/settings-button/settings-button.component.html
@@ -7,7 +7,9 @@
     <mat-icon>person_add</mat-icon>
     <span>フォローするメンバーを選択</span>
   </button>
-  <button mat-menu-item [matMenuTriggerFor]="updateInterval"><mat-icon>timelapse</mat-icon>更新頻度</button>
+  <button mat-menu-item [matMenuTriggerFor]="updateInterval">
+    <mat-icon>timelapse</mat-icon>更新頻度
+  </button>
   <button mat-menu-item (click)="logout()">
     <mat-icon>logout</mat-icon>
     <span>ログアウト</span>
@@ -15,12 +17,20 @@
 </mat-menu>
 
 <mat-menu #updateInterval="matMenu">
-  <ng-container *ngIf="updateIntervalOptions$ | async as updateIntervalOptions">
-    <button mat-menu-item *ngFor="let i of updateIntervalOptions" (click)="setUpdateInterval(i.value)"
-      class="update-interval-option">
-      <mat-icon inline *ngIf="i.selected">check</mat-icon>
-      <span class="icon-space" *ngIf="!i.selected"></span>
-      <span class="label">{{i.value}}分毎</span>
-    </button>
-  </ng-container>
+  @if (updateIntervalOptions$ | async; as updateIntervalOptions) {
+    @for (i of updateIntervalOptions; track $index) {
+      <button
+        mat-menu-item
+        (click)="setUpdateInterval(i.value)"
+        class="update-interval-option"
+      >
+        @if (i.selected) {
+          <mat-icon inline>check</mat-icon>
+        } @else {
+          <span class="icon-space"></span>
+        }
+        <span class="label">{{ i.value }}分毎</span>
+      </button>
+    }
+  }
 </mat-menu>
