--- a/src/app/components/status-message-form/status-message-form.component.html
+++ b/src/app/components/status-message-form/status-message-form.component.html
@@ -1,18 +1,36 @@
 <form [formGroup]="form" class="flex-column" (ngSubmit)="onSubmit()">
   <mat-form-field appearance="fill">
     <mat-label>ステータスメッセージ</mat-label>
-    <textarea formControlName="message" required matInput cdkTextareaAutosize cdkAutosizeMinRows="3"></textarea>
+    <textarea
+      formControlName="message"
+      required
+      matInput
+      cdkTextareaAutosize
+      cdkAutosizeMinRows="3"
+    ></textarea>
   </mat-form-field>
 
-  <mat-checkbox formControlName="pinned">他のユーザーが自分にメッセージを送るときに表示する</mat-checkbox>
+  <mat-checkbox formControlName="pinned"
+    >他のユーザーが自分にメッセージを送るときに表示する</mat-checkbox
+  >
 
   <mat-form-field appearance="fill">
     <mat-label>有効期間</mat-label>
     <mat-select formControlName="expiryDate">
       <mat-option [value]="null">なし</mat-option>
-      <mat-option *ngFor="let i of expiryDateOptions" [value]="i.value">{{i.label}}</mat-option>
+      @for (i of expiryDateOptions; track $index) {
+        <mat-option [value]="i.value">{{ i.label }}</mat-option>
+      }
     </mat-select>
   </mat-form-field>
 
-  <button type="submit" mat-flat-button color="primary" [disabled]="form.invalid" [disabled]="saving">保存</button>
+  <button
+    type="submit"
+    mat-flat-button
+    color="primary"
+    [disabled]="form.invalid"
+    [disabled]="saving"
+  >
+    保存
+  </button>
 </form>
