--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -8,14 +8,22 @@
   </mat-toolbar-row>
 </mat-toolbar>
 
-<ng-container *ngIf="dataSource;else loading">
+@if (dataSource) {
   <div class="form-container">
     <mat-form-field>
       <mat-label>絞り込む</mat-label>
-      <input matInput name="needle" [formControl]="needle">
+      <input matInput name="needle" [formControl]="needle" />
       <mat-icon matPrefix>search</mat-icon>
-      <button mat-icon-button matSuffix (click)="needle.setValue('')"
-        [style.visibility]="(needle.value?.length ?? 0) > 0 ? 'visible' : 'hidden'"><mat-icon>clear</mat-icon></button>
+      <button
+        mat-icon-button
+        matSuffix
+        (click)="needle.setValue('')"
+        [style.visibility]="
+          (needle.value?.length ?? 0) > 0 ? 'visible' : 'hidden'
+        "
+      >
+        <mat-icon>clear</mat-icon>
+      </button>
     </mat-form-field>
   </div>
 
@@ -30,25 +38,30 @@
 
       <ng-container matColumnDef="displayName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>名前</th>
-        <td mat-cell *matCellDef="let element">{{element.displayName}}</td>
+        <td mat-cell *matCellDef="let element">{{ element.displayName }}</td>
       </ng-container>
       <ng-container matColumnDef="department">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>部署</th>
-        <td mat-cell *matCellDef="let element">{{element.department}}</td>
+        <td mat-cell *matCellDef="let element">{{ element.department }}</td>
       </ng-container>
       <ng-container matColumnDef="mail">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>メールアドレス</th>
-        <td mat-cell *matCellDef="let element">{{element.mail}}</td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          メールアドレス
+        </th>
+        <td mat-cell *matCellDef="let element">{{ element.mail }}</td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayColumns; sticky:true"></tr>
-      <tr mat-row *matRowDef="let row; columns:displayColumns" (click)="onRowClick(row)" matRipple></tr>
+      <tr mat-header-row *matHeaderRowDef="displayColumns; sticky: true"></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: displayColumns"
+        (click)="onRowClick(row)"
+        matRipple
+      ></tr>
     </table>
   </div>
-</ng-container>
-
-<ng-template #loading>
+} @else {
   <div class="spinner-container">
     <mat-spinner></mat-spinner>
   </div>
-</ng-template>
+}
