--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,12 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $ex-material-primary: mat.m2-define-palette(mat.$m2-indigo-palette);
-$ex-material-accent: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
+$ex-material-accent: mat.m2-define-palette(
+  mat.$m2-pink-palette,
+  A200,
+  A100,
+  A400
+);
 
 // The warn palette is optional (defaults to red).
 $ex-material-warn: mat.m2-define-palette(mat.$m2-red-palette);
@@ -46,4 +51,24 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-@import "./common-visual-styles.scss";
+.full-width {
+  width: 100%;
+}
+
+.centering {
+  text-align: center;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-fill {
+  flex: 1 1 auto;
+}
+
+// SVGアイコンの色
+mat-toolbar mat-icon svg {
+  fill: currentColor;
+}
