--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,25 +1,23 @@
 <div class="container">
-  <mat-toolbar color="primary">
-    <mat-toolbar-row>
-      <mat-icon>transfer_within_a_station</mat-icon>
-      <span>&nbsp;&nbsp;</span>
-      <span>行き先掲示板</span>
-      <span class="flex-fill"></span>
-      @if (!editMode) {
-        <button
-          mat-icon-button
-          (click)="editMode = true"
-          matTooltip="フォローするメンバーリストを編集"
-        >
-          <mat-icon svgIcon="people_delete_add"></mat-icon>
-        </button>
-        <app-settings-button></app-settings-button>
-      } @else {
-        <button mat-button (click)="editMode = false">
-          <mat-icon>done</mat-icon>Done
-        </button>
-      }
-    </mat-toolbar-row>
+  <mat-toolbar color="secondary">
+    <mat-icon>transfer_within_a_station</mat-icon>
+    <span>&nbsp;&nbsp;</span>
+    <span>行き先掲示板</span>
+    <span class="flex-fill"></span>
+    @if (!editMode) {
+      <button
+        mat-icon-button
+        (click)="editMode = true"
+        matTooltip="フォローするメンバーリストを編集"
+      >
+        <mat-icon svgIcon="people_delete_add"></mat-icon>
+      </button>
+      <app-settings-button></app-settings-button>
+    } @else {
+      <button mat-button (click)="editMode = false">
+        <mat-icon>done</mat-icon>Done
+      </button>
+    }
   </mat-toolbar>
 
   <app-following-list [editMode]="editMode"></app-following-list>
