--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <mat-toolbar color="secondary">
+  <mat-toolbar>
     <mat-icon>transfer_within_a_station</mat-icon>
     <span>&nbsp;&nbsp;</span>
     <span>行き先掲示板</span>
